--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -20,8 +20,8 @@
       </div>
       <div class="top-bar-right" style="background-color:#566377;">
         <ul class="menu" style="background-color:#566377;">
-          <li style="width:24%;"> <input style="width:150%;" type="text" id="search" placeholder="Search our inventory..." required></li>
-          <li style="margin-left:20px;"> <input style="margin-left:115px; height:39px; width:75px;" type="submit" value="Search" id="submit"></li>
+          <li style="width:24%;"> <input style="width:150%; margin-top:5px" type="text" id="search" placeholder="Search our inventory..." required></li>
+          <li style="margin-left:20px;"> <input style="margin-left:115px; margin-top:5px;height:39px; width:75px;" type="submit" value="Search" id="submit"></li>
           {% if user.is_authenticated == 1%}
           <li style="color:white; margin-right:20px; padding: 15px;"><b>Welcome, {{ user.username }}</b></li>
           <li><a href="http://localhost:8000/" style="color:white;"/>Home</a></li>
@@ -44,16 +44,21 @@
         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
         <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
         <li class="orbit-slide is-active">
+          <img src="https://unfade.io/wp-content/uploads/2017/02/unfade-merry-christmas-2000x687.jpeg">
+        </li>
+        <li class=""orbit-slide">
+          
+        </li>
+        <li class="orbit-slide">
+          <img src="http://overbyinkjetsolutions-com.3dcartstores.com/assets/images/Winter%20Parts%20Sale.jpg">
+        </li>
+        <li class="orbit-slide">
+          <img src="https://unfade.io/wp-content/uploads/2017/02/holiday-season-unfade-season-2000x750.jpeg">
         </li>
         <li class="orbit-slide">
           <img src="http://placehold.it/2000x750">
         </li>
-        <li class="orbit-slide">
-          <img src="http://placehold.it/2000x750">
-        </li>
-        <li class="orbit-slide">
-          <img src="http://placehold.it/2000x750">
-        </li>
+
       </ul>
     </div>
 
