Added new menu to base.html so it carries throughout the website. Minor visual changes to user profiles.

--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -29,7 +30,7 @@
 
             <li><a href="http://localhost:8000/logout/" style="color:white;"/>Logout</a></li>
           {% else %}
-            <li><a href="http://localhost:8000/login/"/>Login</a></li>
+            <li style="width:8%;"><a style="color:white; margin-top:5px; border-style:solid;"href="http://localhost:8000/login/"/>Login</a></li>
           {% endif %}
 
 
@@ -47,7 +48,7 @@
           <img src="https://unfade.io/wp-content/uploads/2017/02/unfade-merry-christmas-2000x687.jpeg">
         </li>
         <li class=""orbit-slide">
-          
+
         </li>
         <li class="orbit-slide">
           <img src="http://overbyinkjetsolutions-com.3dcartstores.com/assets/images/Winter%20Parts%20Sale.jpg">
