--- a/congo/database/templates/database/login.html
+++ b/congo/database/templates/database/login.html
@@ -1,19 +1,19 @@
 {% extends 'database/base.html'%}
 
 {% block content %}
-    <div id="login">
+    <div style="margin:0 auto;" id="login">
         <form class="form-horizontal" name="LoginForm"  method="post">
         {% csrf_token %}
         <div class="control-group">
             <label class="control-label" for="username">Username</label>
-            <div class="controls">
+            <div style="width:20%;"class="controls">
                 <input type="text" id="username" name="username"  placeholder="Username">
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="password">Password</label>
             <div class="controls">
-                <input type="password" name="password" id="password" placeholder="Password">
+                <input style="width:20%;" type="password" name="password" id="password" placeholder="Password">
             </div>
         </div>
         <div class="control-group">
