--- a/congo/database/templates/database/user_profile.html
+++ b/congo/database/templates/database/user_profile.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <form method="post">{% csrf_token %}
-    <table>
+    <table style="margin:0 auto;margin-top:50px; margin-bottom:50px;">
         <tr>
             <td>Name</td>
             <td><strong>{{ registered_user.name }}</strong></td>
@@ -23,10 +23,14 @@
             <td>Phone Number</td>
             <td><strong>{{ registered_user.phone_number }}</strong></td>
         </tr>
+
         <tr>
             <td>Annual income</td>
             <td><strong>{{ registered_user.annual_income }}</strong></td>
         </tr>
+
     </table>
+
 </form>
+
 {% endblock content %}
