--- a/congo/database/templates/database/create_user_profile.html
+++ b/congo/database/templates/database/create_user_profile.html
@@ -1,7 +1,7 @@
 {% extends 'database/base.html' %}
 {% block content %}
-<form method="post">
-    <table>
+<form method="post" style="padding:45px;">
+    <table style="margin:0 auto;">
         <tr>
             <td>Your Name</td>
             <td><strong>{{ user.name }}</strong></td>
