--- a/congo/database/templates/database/user_profile.html
+++ b/congo/database/templates/database/user_profile.html
@@ -1,8 +1,8 @@
 {% extends 'database/base.html' %}
 
 {% block content %}
-<form method="post">{% csrf_token %}
-    <table style="margin:0 auto;margin-top:50px; margin-bottom:50px;">
+<form method="post" style="padding:45px;">{% csrf_token %}
+    <table style="margin: 0 auto;">
         <tr>
             <td>Name</td>
             <td><strong>{{ registered_user.name }}</strong></td>
@@ -26,7 +26,7 @@
 
         <tr>
             <td>Annual income</td>
-            <td><strong>{{ registered_user.annual_income }}</strong></td>
+            <td><strong>${{ registered_user.annual_income }}</strong></td>
         </tr>
 
     </table>
