--- a/congo/database/templates/database/create_user_info.html
+++ b/congo/database/templates/database/create_user_info.html
@@ -1,7 +1,7 @@
 {% extends 'database/base.html' %}
 
 {% block content %}
-<form method="post" class="post-form">{% csrf_token %}
+<form method="post" >{% csrf_token %}
     {{form.as_p}}
     <button>submit</button>
 </form>
