--- a/congo/database/templates/database/login.html
+++ b/congo/database/templates/database/login.html
@@ -1,26 +1,14 @@
 {% extends 'database/base.html'%}
 
 {% block content %}
-    <div style="margin:0 auto;" id="login">
-        <form class="form-horizontal" name="LoginForm"  method="post">
+    <div id="login">
+        <form class="form-horizontal" name="LoginForm" style="border-color:gray;border-style:solid; border-width:.5px; width:30%; margin:0 auto; padding:30px; margin-top:5%; margin-bottom:5%; border-radius:10px;" method="post">
         {% csrf_token %}
-        <div class="control-group">
             <label class="control-label" for="username">Username</label>
-            <div style="width:20%;"class="controls">
-                <input type="text" id="username" name="username"  placeholder="Username">
-            </div>
-        </div>
-        <div class="control-group">
+            <input type="text" id="username" name="username"  placeholder="Username">
             <label class="control-label" for="password">Password</label>
-            <div class="controls">
-                <input style="width:20%;" type="password" name="password" id="password" placeholder="Password">
-            </div>
-        </div>
-        <div class="control-group">
-            <div class="controls">
-                <button type="submit" class="btn">Login</button>
-            </div>
-        </div>
+            <input type="password" name="password" id="password" placeholder="Password">
+            <button type="submit" style="border-radius:5px; margin: 14px 40%; padding: 10px 10px; background-color:#566377; border:none; color:white;" class="btn">Login</button>
         </form>
     </div>
 
