Here's some formatting changes to test and base

--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -23,7 +23,7 @@
   </head>
 
 
-    <!-- Start Top Bar -->
+    <!-- Start Top Bar Shrek -->
     <div class="top-bar" style="background-color:rgba(38, 57, 23, .2)" >
         <center>
             <p style="font-size: 2px"><br></p>
