Here's some formatting changes to test and base

--- a/congo/database/templates/database/base.html
+++ b/congo/database/templates/database/base.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <!-- Start Top Bar Memes -->
+    <!-- Start Top Bar -->
     <div class="top-bar" style="background-color:#385723; align:left;">
         <center>
           <p style="text-align:center; color:white; font-size:40px; font-family:'Julius Sans One', sans-serif"><a href="http://localhost:8000/" style="color:white"><b>Congo</b></a></p>
